--- a/w3school.ipynb
+++ b/w3school.ipynb
@@ -1681,8 +1681,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "047f50a8-e9f3-4685-bffb-8ed5a88766aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ((3**3)/(3**2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8c196df6-60af-42d9-a3a9-70693f23411d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'car', 'year': 2078}\n",
+      "brand car\n",
+      "year 2078\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydict={\n",
+    "    \"brand\":\"car\",\n",
+    "    \"year\":2078\n",
+    "}\n",
+    "print(mydict)\n",
+    "for x in mydict:\n",
+    "    print (x,mydict[x])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "129dd5d2-2722-4d5a-aae2-8cf50c4be2ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import messagebox\n",
+    "\n",
+    "def submit_form():\n",
+    "    username = entry_username.get()\n",
+    "    email = entry_email.get()\n",
+    "    gender = gender_var.get()\n",
+    "    hobbies = []\n",
+    "    if hobby_reading.get(): hobbies.append(\"Reading\")\n",
+    "    if hobby_traveling.get(): hobbies.append(\"Traveling\")\n",
+    "    if hobby_sports.get(): hobbies.append(\"Sports\")\n",
+    "    country = country_var.get()\n",
+    "\n",
+    "    if not username or not email:\n",
+    "        messagebox.showwarning(\"Input Error\", \"Please fill in all required fields.\")\n",
+    "        return\n",
+    "\n",
+    "    info = f\"\"\"\n",
+    "Username: {username}\n",
+    "Email: {email}\n",
+    "Gender: {gender}\n",
+    "Hobbies: {', '.join(hobbies)}\n",
+    "Country: {country}\n",
+    "\"\"\"\n",
+    "    messagebox.showinfo(\"Form Submitted\", info)\n",
+    "\n",
+    "# Main window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Complete Form\")\n",
+    "root.geometry(\"400x400\")\n",
+    "\n",
+    "# Username\n",
+    "tk.Label(root, text=\"Username:\").pack(anchor=\"w\", padx=10, pady=5)\n",
+    "entry_username = tk.Entry(root, width=30)\n",
+    "entry_username.pack(padx=10)\n",
+    "\n",
+    "# Email\n",
+    "tk.Label(root, text=\"Email:\").pack(anchor=\"w\", padx=10, pady=5)\n",
+    "entry_email = tk.Entry(root, width=30)\n",
+    "entry_email.pack(padx=10)\n",
+    "\n",
+    "# Gender Radio Buttons\n",
+    "tk.Label(root, text=\"Gender:\").pack(anchor=\"w\", padx=10, pady=5)\n",
+    "gender_var = tk.StringVar(value=\"Male\")\n",
+    "tk.Radiobutton(root, text=\"Male\", variable=gender_var, value=\"Male\").pack(anchor=\"w\", padx=20)\n",
+    "tk.Radiobutton(root, text=\"Female\", variable=gender_var, value=\"Female\").pack(anchor=\"w\", padx=20)\n",
+    "tk.Radiobutton(root, text=\"Other\", variable=gender_var, value=\"Other\").pack(anchor=\"w\", padx=20)\n",
+    "\n",
+    "# Hobbies Checkboxes\n",
+    "tk.Label(root, text=\"Hobbies:\").pack(anchor=\"w\", padx=10, pady=5)\n",
+    "hobby_reading = tk.BooleanVar()\n",
+    "hobby_traveling = tk.BooleanVar()\n",
+    "hobby_sports = tk.BooleanVar()\n",
+    "tk.Checkbutton(root, text=\"Reading\", variable=hobby_reading).pack(anchor=\"w\", padx=20)\n",
+    "tk.Checkbutton(root, text=\"Traveling\", variable=hobby_traveling).pack(anchor=\"w\", padx=20)\n",
+    "tk.Checkbutton(root, text=\"Sports\", variable=hobby_sports).pack(anchor=\"w\", padx=20)\n",
+    "\n",
+    "# Country Dropdown\n",
+    "tk.Label(root, text=\"Country:\").pack(anchor=\"w\", padx=10, pady=5)\n",
+    "country_var = tk.StringVar(value=\"Select Country\")\n",
+    "country_options = [\"Nepal\", \"India\", \"USA\", \"UK\", \"Canada\"]\n",
+    "tk.OptionMenu(root, country_var, *country_options).pack(padx=10)\n",
+    "\n",
+    "# Submit Button\n",
+    "tk.Button(root, text=\"Submit\", command=submit_form).pack(pady=20)\n",
+    "\n",
+    "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c453a9-e12e-4673-a7f0-11e8485652f6",
    "metadata": {},
    "outputs": [],
    "source": []
