--- a/w3school.ipynb
+++ b/w3school.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "2f159312-2e66-47d2-8257-fe66bc51ec16",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "5d153a38-9ad6-4bdd-b6ba-1653c618bdfe",
    "metadata": {},
    "outputs": [
@@ -769,9 +769,8 @@
     "\n",
     "row=5\n",
     "for i in range(row,0,-1):\n",
-    "    num=i\n",
     "    for j in range(i):\n",
-    "        print(num,end='')\n",
+    "        print(i,end='')\n",
     "    print(\"\\r\")\n"
    ]
   },
@@ -1075,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "id": "03dd36d5-54b2-466b-9e94-0a871b36e6d1",
    "metadata": {},
    "outputs": [
@@ -1801,8 +1800,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "03c453a9-e12e-4673-a7f0-11e8485652f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        * \n",
+      "       * * \n",
+      "      * * * \n",
+      "     * * * * \n",
+      "    * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = 5\n",
+    "k = 2 * rows - 2\n",
+    "for i in range(0, rows):\n",
+    "    for j in range(0, k):\n",
+    "        print(end=\" \")\n",
+    "    k = k - 1\n",
+    "    for j in range(0, i + 1):\n",
+    "        print(\"* \", end=\"\")\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be4761bd-2ca7-4ee4-b605-78d03f6545d8",
    "metadata": {},
    "outputs": [],
    "source": []
