--- a/w3school.ipynb
+++ b/w3school.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0f9a60f6-6040-4f60-916d-a7f76a75ad66",
    "metadata": {},
    "outputs": [
@@ -588,11 +588,11 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "\n",
       "1 \n",
       "1 2 \n",
       "1 2 3 \n",
-      "1 2 3 4 \n",
-      "1 2 3 4 5 \n"
+      "1 2 3 4 \n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
     "#1234\n",
     "row=6\n",
     "for i in range(row):\n",
-    "    for j in range(1,i+1):\n",
+    "    for j in range(1,i):\n",
     "        print(j,end=' ')\n",
     "    print('')\n"
    ]
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "fa52e641-4327-4443-bbf9-02c9121cc577",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,8 @@
       "0 1 2 3 4 \n",
       "0 1 2 3 \n",
       "0 1 2 \n",
-      "0 1 \n"
+      "0 1 \n",
+      "0 \n"
      ]
     }
    ],
@@ -699,9 +700,9 @@
     "#0123\n",
     "#012\n",
     "#01\n",
-    "row=5\n",
+    "row=6\n",
     "for i in range(row,0,-1):\n",
-    "    for j in range(i+1):\n",
+    "    for j in range(i):\n",
     "        print(j,end=' ')\n",
     "    print(\"\\r\")\n",
     "    "
